--- a/templates/inventory/show.html.twig
+++ b/templates/inventory/show.html.twig
@@ -1,31 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Inventory {{ inventory.id }}{% endblock %}
+{% block title %}Inventory {{ inventory.title }}{% endblock %}
 
 {% block body %}
-    <h2>Inventory: {{ inventory.name }}</h2>
+    <h1>{{ inventory.title }}</h1>
 
-    <p>
-        <strong>Public:</strong>
-        {{ inventory.isPublic ? 'Yes' : 'No' }}
-    </p>
-
-    <p>
-        <strong>Owner:</strong>
-        {{ inventory.owner.email }}
-    </p>
+    <p><strong>Category:</strong> {{ inventory.category }}</p>
+    <p><strong>Description:</strong> {{ inventory.description }}</p>
+    <p><strong>Owner:</strong> {{ inventory.owner.email }}</p>
 
     <hr>
 
-    {% if is_granted('INVENTORY_CREATE_ITEM', inventory) %}
-        <p>
-            <a class="button" href="#">Create item</a>
-        </p>
-    {% endif %}
+    <h2>Sections</h2>
 
-    {% if is_granted('INVENTORY_EDIT', inventory) %}
-        <p>
-            <a class="button" href="#">Edit inventory</a>
-        </p>
-    {% endif %}
+    <ul>
+        <li><strong>Items</strong> (implemented)</li>
+        <li><strong>Discussion</strong> (polling)</li>
+        <li><strong>Likes</strong></li>
+        <li><strong>ACL</strong></li>
+    </ul>
+
+    <hr>
+
+    <p>
+        UI is intentionally minimal.<br>
+        Core logic is implemented in controllers, services, repositories and voters.
+    </p>
 {% endblock %}
