--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,13 @@
 
     {% if app.user %}
         | Logged in as {{ app.user.email }}
+
+        {% if app.user.isAdmin %}
+            <strong>(ADMIN)</strong>
+        {% else %}
+            <strong>(USER)</strong>
+        {% endif %}
+
         | <a href="{{ path('app_logout') }}">Logout</a>
     {% else %}
         | <a href="{{ path('login') }}">Login</a>
